tests/errors/sem.expected_constant.type-decl.or
main :: () -> void {
    x := int;
    y: x = 0;
    y;
};
